--- a/src/main/resources/templates/demand.html
+++ b/src/main/resources/templates/demand.html
@@ -2,20 +2,14 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-    <title>Office</title>
+    <title>金融远期合约交易平台-需求交易</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+    <meta name="description" content="金融远期合约交易平台"/>
+    <meta name="author" content="CL"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/animate.min.css"/>
-    <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css"/>
-    <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
+    <link rel="stylesheet" href="css/demand.css" />
 </head>
 
 <body>
@@ -26,7 +20,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target=".navbar-responsive-collapse">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">响应式导航栏</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -69,8 +63,10 @@
     </div>
 </nav>
 
-<div class="row container-kamn">
-    <img src="images/slider/slide5.jpg" class="blog-post" alt="Feature-img" align="right" width="100%"/>
+<div class="container">
+    <div class="demand-item-list">
+        <p class="demand-item-title">需求名字<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p>
+    </div>
 </div>
 
 <div id="banners"></div>
