--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,12 +115,13 @@
     <div class="container">
         <dl class="main-data">
             <dt>
-                <span class="glyphicon glyphicon-home" aria-hidden="true" style="float: left;margin-right: 30px;"></span>
+                <span class="glyphicon glyphicon-home" aria-hidden="true" style="float: left;margin: 4px 12px 4px auto;"></span>
                 <h3>数据统计</h3>
             </dt>
-            <span>累计交易额：235231</span>
-            <span style="margin-left: 360px;">已达成合约量：235231</span>
-            <span style="float: right;margin-right: 0;">累计注册人数：235231</span>
+            <span>累计交易额：<span class="text-danger" style="font-size: 24px">12141元</span></span>
+            <span style="margin-left: 360px;">已达成合约量：<span class="text-danger" style="font-size: 24px">12141份</span></span>
+            <span style="float: right;margin-right: 0;">累计注册人数：<span class="text-danger" style="font-size: 24px">12141人</span></span>
+            <hr />
         </dl>
     </div>
 </section>
