--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -46,11 +46,15 @@
                 <li>
                     <a href="index.html">首页</a>
                 </li>
+
+                <li>
+                    <a href="news.html">新闻资讯</a>
+                </li>
                 <li>
                     <a href="demand.html">需求社区</a>
                 </li>
                 <li>
-                    <a href="news.html">新闻资讯</a>
+                    <a href="topic.html">话题中心</a>
                 </li>
                 <li>
                     <a href="statistic.html">交易数据</a>
