--- a/src/main/resources/static/css/demand.css
+++ b/src/main/resources/static/css/demand.css
@@ -1,17 +1,53 @@
 .demand-item-list {
     float: left;
-    border: 1px solid #5e5e5e;
+    border: 1px solid #e6e6e6;
     background: #fff;
     padding: 22px 8px 24px 36px;
     margin-bottom: 20px;
-    height: 107px;
     width: 1154px;
+    height: 107px;
+
 }
 
-.demand-item-title {
+.jyfw-title {
+    color: #6BAAA8;
+}
 
+.block{
+    background: #6BAAA8;
+    height: 2px;
+    width: 132px;
+}
+
+.jyfw-section{
+
+    border-radius: 5px;
+    margin-bottom: 15px;
+    width: 1154px;
+    front-size:18px;
+    padding-top: 3px;
+    padding-bottom: 10px;
+    background: #fff;
 }
 
 .demand-hot-icon {
     margin-left: 6px;
+}
+
+.demand-input {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
