--- a/src/main/resources/templates/statistic.html
+++ b/src/main/resources/templates/statistic.html
@@ -41,11 +41,15 @@
                 <li>
                     <a href="index.html">首页</a>
                 </li>
+
+                <li>
+                    <a href="news.html">新闻资讯</a>
+                </li>
                 <li>
                     <a href="demand.html">需求社区</a>
                 </li>
                 <li>
-                    <a href="news.html">新闻资讯</a>
+                    <a href="topic.html">话题中心</a>
                 </li>
                 <li class="active">
                     <a href="statistic.html">交易数据</a>
@@ -57,9 +61,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">我的合约</a></li>
-                        <li><a href="#">我的订单</a></li>
-                        <li><a href="#">积分商城</a></li>
+                        <li><a href="/mycontact">我的合约</a></li>
+                        <li><a href="/mypage">个人主页</a></li>
                         <li><a href="/logout">安全退出</a></li>
                     </ul>
                 </li>
