--- a/src/main/resources/templates/demandadd.html
+++ b/src/main/resources/templates/demandadd.html
@@ -82,19 +82,16 @@
             <div class="aui-content-up-form">
                 <h2 style="padding-bottom: 15px; padding-left: 230px;" class="jyfw-title">发布需求</h2>
             </div>
-
             <div class="" style="padding-bottom: 15px; padding-left: 236px;">
-                <form>
-                    <input type="radio" name="saler" id="red" />买方&ensp;&ensp;
-                    <input type="radio" name="saler" id="blue" />卖方
-                </form>
+                <input type="radio" th:field="*{gender}" name="saler" id="red" value="买方" checked="true"  required="required" />买方&ensp;&ensp;
+                <input type="radio" th:field="*{gender}" name="saler" id="blue" value="卖方" required="required" />卖方
             </div>
             <div class="aui-form-group clear">
                 <label class="aui-label-control">
                     交易时间 <em>*</em>
                 </label>
                 <div class="aui-form-input" style="padding-bottom: 15px;">
-                    <input type="text" th:field="*{dealTime}" class="form-control" id="timePicker" required="required" placeholder="请输入交易时间"/>
+                    <input type="text" th:field="*{dealTime}" class="form-control" id="timePicker" required="required" placeholder="请选择交易时间"/>
                 </div>
             </div>
             <div class="aui-form-group clear">
@@ -135,7 +132,7 @@
                 <p>为了使您能够体验更好的本平台服务，禁止发布虚假内容。</p>
             </div>
             <div class="aui-btn-default" style="padding-left: 230px;">
-                <button class="aui-btn aui-btn-account">提交</button>
+                <button class="form-btn btn-primary btn-submit">提交</button>
             </div>
         </form>
 
@@ -169,9 +166,10 @@
 
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript">
     new WOW().init();
 </script>
 </body>
