--- a/src/main/resources/templates/demandadd.html
+++ b/src/main/resources/templates/demandadd.html
@@ -83,8 +83,8 @@
                 <h2 style="padding-bottom: 15px; padding-left: 230px;" class="jyfw-title">发布需求</h2>
             </div>
             <div class="" style="padding-bottom: 15px; padding-left: 236px;">
-                <input type="radio" th:field="*{gender}" name="saler" id="red" value="买方" checked="true"  required="required" />买方&ensp;&ensp;
-                <input type="radio" th:field="*{gender}" name="saler" id="blue" value="卖方" required="required" />卖方
+                <input type="radio" th:field="*{category}" name="saler" id="red" value="买方" checked="true"  required="required" />买方&ensp;&ensp;
+                <input type="radio" th:field="*{category}" name="saler" id="blue" value="卖方" required="required" />卖方
             </div>
             <div class="aui-form-group clear">
                 <label class="aui-label-control">
