--- a/src/main/resources/static/css/demand.css
+++ b/src/main/resources/static/css/demand.css
@@ -5,7 +5,7 @@
     padding: 22px 8px 24px 36px;
     margin-bottom: 20px;
     width: 1154px;
-    height: 107px;
+    height: 132px;
 
 }
 
@@ -50,4 +50,34 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.demand-item-title {
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+
+.demand-item-detail {
+    font-size: 14px;
+    color: #999;
+    display: block;
+    margin-top: 6px;
+}
+
+.demand-item-object {
+    text-align: left;
+    font-size: 26px;
+    color: #FF5500;
+}
+
+.demand-item-num {
+    text-align: left;
+    font-size: 26px;
+}
+
+.demand-item-price {
+    text-align: left;
+    font-size: 26px;
+    color: #FF5500;
 }
