--- a/src/main/resources/templates/topic.html
+++ b/src/main/resources/templates/topic.html
@@ -66,36 +66,48 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="jyfw-section">
-        <h3 class="jyfw-title">话题中心<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></h3>
-        <div class="block"></div>
+<div class="container" style="padding-left: 30px;">
+    <div class="jyfw-section row">
+        <div class="col-md-3">
+            <h3 class="jyfw-title">话题中心 <span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></h3>
+            <div class="block"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="input-group row" style="height: 60px;">
+                <input type="text" class="form-control" id="topicName" placeholder="请输入标的名称" style="margin-top: 20px;"/>
+                <span class="input-group-btn">
+                    <button class="btn btn-primary btn-search" id="btn-search" style="margin-top: 14px;">查找</button>
+                </span>
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-2">
+            <a href="topicadd.html" class="jyfw-section">
+                <div style="padding-top: 18px;">
+                    <button type="button" class="btn btn-primary">发起话题</button>
+                </div>
+            </a>
+        </div>
     </div>
+
 </div>
 
 <div class="container">
-    <div class="demand-item-list">
-        <p class="demand-item-title">合约名称<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p>
+    <div class="demand-item-list" id="topic">
         <div class="row">
-            <div class="col-md-2">
-                <p class="demand-item-detail">合约标的</p>
+            <div class="col-md-8">
+                <p class="demand-item-title">话题名称<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p>
             </div>
             <div class="col-md-2">
-                <p class="demand-item-detail">交易数量</p>
+                <p class="demand-item-detail">用户名</p>
             </div>
             <div class="col-md-2">
-                <p class="demand-item-detail">交易价格</p>
+                <p class="demand-item-detail">发布时间</p>
             </div>
-            <div class="col-md-2">
-                <p class="demand-item-detail">交易日期</p>
-            </div>
-            <div class="col-md-2">
-                <p class="demand-item-detail">合约状态</p>
-            </div>
-            <div class="col-md-2">
-                <p class="demand-item-detail">合约详情</p>
-            </div>
-
+        </div><p>话题描述......</p>
+        <div class="demand-item-detail row">
+            <div class="col-md-8"></div><div class="col-md-1">xx条评论</div><div class="col-md-1">点赞</div>
+            <div class="col-md-2" style="padding-bottom: 15px;"><a href="topicdiscuss.html">参与讨论</a></div>
         </div>
     </div>
 
@@ -113,7 +125,49 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
+<script src="js/app.js"></script>
 <script>
+    $(function () {
+        Page(1, 10);
+    })
+
+    $("#btn-search").click(function () {
+        Page(1, 10);
+    })
+
+    function Page(page, count) {
+        var topicName = $("#topicName").val();
+        $.ajax({
+            url: '/topics',
+            data: {
+                "page": page,
+                "count": count,
+                "topicName": topicName,
+                "status": 1
+            },
+            type: "POST",
+            success: function (result) {
+                if(result.success) {
+                    $("#topic").empty();
+                    loadPageInfo(result.data);
+                    $(result.data.list).each(function (i, item) {
+                        var pageStr = '';
+                        pageStr = pageStr + '<div class="row"><div class="col-md-8"><p class="demand-item-title">' + item.topicName + '<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><p class="demand-item-detail">'+ item.name +'</p></div><div class="col-md-2"><p class="demand-item-detail">'+ timeExchange(item.createTime) +'</p></div>';
+                        pageStr = pageStr + '</div><p>'+ item.content +'</p>';
+                        pageStr = pageStr + '<div class="demand-item-detail row">';
+                        pageStr = pageStr + '<div class="col-md-8"></div><div class="col-md-1">xx条评论</div><div class="col-md-1">点赞</div>';
+                        pageStr = pageStr + '<div class="col-md-2" style="padding-bottom: 15px;"><a href="topicdiscuss.html">参与讨论</a></div>';
+                        pageStr = pageStr + '</div>';
+                        $("#topic").append(pageStr);
+                    })
+                }else {
+                    console.log("获取数据失败！");
+                }
+            }
+        })
+    }
+
     new WOW().init();
 </script>
 
